openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sendlock
  labels:
    app: sendlock
spec:
  selector:
    app: sendlock
  ports:
    - name: http
      port: 8080
      targetPort: 8080
